# ya

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  clear.sh  gdbautomation  test.sh
examples/: test0.dzt  test1.txt
examples/testdir2/2testdir3/: 42951-0.txt  pg42944.txt  pg42948.txt  pg42954.txt  pg42955.txt
examples/testdir3/: 42949-0.txt  pg42945.txt  pg42947.txt
src/: CMakeLists.txt
src/lib/data/: CMakeLists.txt  DataException.cc  DataException.h  ThreadController.cc  ThreadController.h  WordBinSet.h
